fix(devloop): compile with -parameters and -g like a Maven build (#25587)
## Summary

The dev-loop daemon compiled classes without `-parameters` and `-g`, so
recompiled classes lost method parameter names and debug info that a
normal Maven build keeps. It now passes both flags, which fixes runtime
errors such as Spring Data's "for queries with named parameters you need
to provide names for method parameters" after an apply.

Fixes #25560

## What changed

- `Compile` now passes `-parameters` and `-g` in its fixed javac option
list.
- The flags are passed unconditionally instead of being read from the
poms. In every Spring Boot project the compiler plugin configuration
comes from a parent outside the checkout (`spring-boot-starter-parent`
sets `<parameters>true</parameters>`, and the plugin defaults `<debug>`
to true), which the daemon's pom reader cannot see — and that is exactly
the case that has to work.
- `README.md` documents this under "Known limits": the compiler plugin
configuration is not read (so `<compilerArgs>`, `--enable-preview` and
`-Werror` are still ignored), and `target/classes` is shared with Maven,
so `mvn clean` is the recovery after a session.

## Test summary

| # | Status | What the test verifies | Why it matters |
|---|--------|------------------------|----------------|
| 1 | ✅ | A compiled method's parameter reports `isNamePresent()` and
the real name `name` | Without `-parameters`, a recompiled Spring Data
repository fails at runtime in code nobody edited, while the apply
reports success |
| 2 | ✅ | The written class file contains a `LocalVariableTable` |
Without `-g`, debuggers and stack traces lose local variable info that a
normal Maven build keeps |
| 3 | ✅ | The compile itself still succeeds with the new options | A bad
option list would break every apply |

- `CompileTest.compile_keepsParameterNamesAndDebugInfoLikeAMavenBuild` —
covers rows 1, 2 and 3.

Deliberately untested: that `<compilerArgs>`, `--enable-preview` and
`-Werror` are