@@ -471,6 +471,22 @@ its answer rather than claiming success.
   produced. Such a project needs `mvn compile` rather than `apply`; honouring
   the module's `proc` and `annotationProcessorPaths` configuration is not
   implemented.
+- **The compiler plugin's configuration is not read**, except for the release
+  level (see above). The option list is fixed — `--release`, `-encoding UTF-8`,
+  `-nowarn`, `-proc:none`, `-parameters`, `-g` — so `<compilerArgs>`,
+  `--enable-preview` and `-Werror` are not honoured. `-parameters` and `-g` are
+  passed unconditionally rather than looked up: a normal build has both on (the
+  plugin defaults `<debug>` to true, `spring-boot-starter-parent` sets
+  `<parameters>true</parameters>`), and both live in a parent outside the
+  checkout that the pom reader cannot see. Without `-parameters` a recompiled
+  Spring Data repository throws "for queries with named parameters you need to
+  provide names for method parameters", from code nobody edited.
+- **`target/classes` is shared with Maven, and the daemon writes into it last.**
+  A class newer than its source makes `mvn compile` a no-op, so after a session
+  `mvn verify` tests whatever the in-loop compile did differently — no
+  annotation processing, no project compiler arguments. `mvn clean` is the
+  recovery; compiling into an output directory of the daemon's own is not
+  implemented.
 - **HotswapAgent's `Vaadin`, `Spring` and `SpringBoot` plugins are disabled**
   (`Launch`, `-DdisabledPlugins=…`). The Vaadin one targets an older package and
   fires a competing full page reload; the Spring ones were measured to lose the
